# nftmarketplace.com.br

./: .dockerignore  .gitignore  pyproject.toml
.github/workflows/: code-quality.yml  deploy.yml
accounts/: models.py  tasks.py  urls.py  views.py
accounts/docs/: __init__.py  habbo.py  metamask.py  user.py
accounts/migrations/: 0001_initial.py  0002_alter_user_cpf_alter_user_telefone_and_more.py  0003_make_username_optional.py
accounts/serializers/: auth.py  habbo.py  user.py
accounts/views/: __init__.py  auth.py  habbo.py  metamask.py  user.py
banners/: admin.py  models.py  serializers.py  views.py
banners/migrations/: 0001_initial.py  0002_add_image_mobile.py
core/: health.py  settings.py  urls.py
data/: .gitignore
docker/: Dockerfile  check-nginx.sh  cleanup-containers.sh  docker-compose-wrapper.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fix-nginx-config.sh  fix-postgres-user.sh  get-certificate-manual.sh  init-db.sh  setup-ssl.sh
docker/nginx/: nginx.conf.orig  nginx.ssl.conf
frontend/: Dockerfile  index.html  vite.config.ts
frontend/src/: App.tsx
legacy/: admin.py  docs.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
nft/: __init__.py  admin.py  apps.py  filters.py  models.py  record_access_view.py  services.py  services_securehabbo.py  tasks.py  urls.py  views.py  views_new.py
nft/admin/: __init__.py  (+2 more)
orders/: __init__.py  admin.py  apps.py  backup.py  emails.py  models.py  tasks.py  urls.py  utils.py
payments/: README.md  admin.py  apps.py  models.py  services.py  urls.py
(+90 files in other folders)
