[tool.poetry]
name = "nft-portal"
version = "0.1.0"
description = ""
authors = ["filipe@fmartns.dev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = "^5.2.0"
djangorestframework = "^3.15.0"
djangorestframework-simplejwt = "^5.3.0"
drf-spectacular = "^0.27.0"
drf-spectacular-sidecar = "^2024.5.0"
django-filter = "^24.0"
django-cors-headers = "^4.3.0"
celery = "^5.3.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
zstandard = "^0.22.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.0.0"
eth-account = "^0.10.0"
pytz = "^2024.1"
stripe = "^8.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.1.0"
flake8 = "^7.0.0"
pyright = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
